[gd_scene load_steps=7 format=3 uid="uid://biolobe8pguwu"]

[ext_resource type="Script" path="res://Nodes/Scripts/hkbPoweredRagdollControlsModifierScene.gd" id="1_k0djk"]
[ext_resource type="Texture2D" uid="uid://dtc4ja5slmyqt" path="res://ConfirmDeleteButton.png" id="2_3a52v"]
[ext_resource type="Texture2D" uid="uid://dtrsj56jbquo8" path="res://PinButton.png" id="3_4o5pd"]
[ext_resource type="Texture2D" uid="uid://csb3wjekhlmy1" path="res://UnpinButton.png" id="4_bx4vt"]
[ext_resource type="Texture2D" uid="uid://jrafqhji2unw" path="res://DeleteButton.png" id="5_ufnxr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y45yo"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.168627, 0.211765, 0.266667, 0.898039)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 1
anti_aliasing_size = 2.0

[node name="hkbPoweredRagdollControlsModifier" type="GraphNode"]
offset_right = 360.0
offset_bottom = 200.0
title = "hkbPoweredRagdollControlsModifier"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = true
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
script = ExtResource("1_k0djk")

[node name="connection" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="connectionLabel" type="Label" parent="connection"]
layout_mode = 2
text = "connection
"

[node name="Space" type="Control" parent="connection"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="EditButton" type="Button" parent="connection"]
layout_mode = 2
text = "Edit"

[node name="variableBindingSet" type="Label" parent="."]
layout_mode = 2
text = "variableBindingSet"
horizontal_alignment = 2

[node name="bones" type="Label" parent="."]
layout_mode = 2
text = "bones"
horizontal_alignment = 2

[node name="boneWeights" type="Label" parent="."]
layout_mode = 2
text = "boneWeights"
horizontal_alignment = 2

[node name="Name" type="LineEdit" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "PoweredRagdollControlsModifier"
placeholder_text = "Name"

[node name="DataPopupPanel" type="PopupPanel" parent="."]
transparent_bg = true
initial_position = 1
size = Vector2i(600, 461)
borderless = false
theme_override_styles/panel = SubResource("StyleBoxFlat_y45yo")

[node name="VBoxContainer" type="VBoxContainer" parent="DataPopupPanel"]
offset_left = 5.0
offset_top = 5.0
offset_right = 595.0
offset_bottom = 456.0

[node name="BaseNode" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer"]
layout_mode = 2

[node name="ConfirmDeleteButton" type="TextureButton" parent="DataPopupPanel/VBoxContainer/BaseNode"]
visible = false
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_3a52v")

[node name="baseNodeLabel" type="Label" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "   hkbPoweredRagdollControlsModifier"
vertical_alignment = 2

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="baseNodeLabel2" type="Label" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "#"
vertical_alignment = 1

[node name="nodeIDSpinBox" type="SpinBox" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
min_value = 90.0
max_value = 9999.0
value = 90.0
rounded = true

[node name="PinButton" type="TextureButton" parent="DataPopupPanel/VBoxContainer/BaseNode"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("3_4o5pd")
texture_pressed = ExtResource("4_bx4vt")

[node name="DeleteButton" type="TextureButton" parent="DataPopupPanel/VBoxContainer/BaseNode"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("5_ufnxr")

[node name="PanelContainer" type="PanelContainer" parent="DataPopupPanel/VBoxContainer"]
layout_mode = 2

[node name="FoldingPanel" type="VBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="userData" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/userData"]
layout_mode = 2
text = "   userData"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/userData"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="userDataButton" type="OptionButton" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/userData"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "0"
popup/item_0/id = 0
popup/item_1/text = "1"
popup/item_1/id = 1
popup/item_2/text = "2"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3

[node name="enable" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enable"]
layout_mode = 2
text = "   enable"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enable"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="enableButton" type="OptionButton" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enable"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
item_count = 2
selected = 1
popup/item_0/text = "False"
popup/item_0/id = 0
popup/item_1/text = "True"
popup/item_1/id = 1

[node name="maxForce" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/maxForce"]
layout_mode = 2
text = "   maxForce"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/maxForce"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="maxForceLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/maxForce"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "1.0"
placeholder_text = "1.0"
alignment = 2
max_length = 20

[node name="tau" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/tau"]
layout_mode = 2
text = "   tau"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/tau"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="tauLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/tau"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "1.0"
placeholder_text = "1.0"
alignment = 2
max_length = 20

[node name="damping" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/damping"]
layout_mode = 2
text = "   damping"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/damping"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="dampingLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/damping"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "1.0"
placeholder_text = "1.0"
alignment = 2
max_length = 20

[node name="proportionalRecoveryVelocity" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/proportionalRecoveryVelocity"]
layout_mode = 2
text = "   proportionalRecoveryVelocity"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/proportionalRecoveryVelocity"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="proportionalRecoveryVelocityLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/proportionalRecoveryVelocity"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "1.0"
placeholder_text = "1.0"
alignment = 2
max_length = 20

[node name="constantRecoveryVelocity" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/constantRecoveryVelocity"]
layout_mode = 2
text = "   constantRecoveryVelocity"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/constantRecoveryVelocity"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="constantRecoveryVelocityLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/constantRecoveryVelocity"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "1.0"
placeholder_text = "1.0"
alignment = 2
max_length = 20

[node name="poseMatchingBone0" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/poseMatchingBone0"]
layout_mode = 2
text = "   poseMatchingBone0"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/poseMatchingBone0"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="poseMatchingBone0SpinBox" type="SpinBox" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/poseMatchingBone0"]
layout_mode = 2
max_value = 9999.0
rounded = true

[node name="poseMatchingBone1" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/poseMatchingBone1"]
layout_mode = 2
text = "   poseMatchingBone1"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/poseMatchingBone1"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="poseMatchingBone1SpinBox" type="SpinBox" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/poseMatchingBone1"]
layout_mode = 2
max_value = 9999.0
rounded = true

[node name="poseMatchingBone2" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/poseMatchingBone2"]
layout_mode = 2
text = "   poseMatchingBone2"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/poseMatchingBone2"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="poseMatchingBone2SpinBox" type="SpinBox" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/poseMatchingBone2"]
layout_mode = 2
max_value = 9999.0
rounded = true

[node name="mode" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/mode"]
layout_mode = 2
text = "   mode"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/mode"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="modeButton" type="OptionButton" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/mode"]
custom_minimum_size = Vector2(180, 31)
layout_mode = 2
clip_text = true
item_count = 3
selected = 0
popup/item_0/text = "MODE_COMPUTE"
popup/item_0/id = 0
popup/item_1/text = "MODE_NONE"
popup/item_1/id = 1
popup/item_2/text = "MODE_RAGDOLL"
popup/item_2/id = 2

[node name="animationBlendFraction" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/animationBlendFraction"]
layout_mode = 2
text = "   animationBlendFraction"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/animationBlendFraction"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="animationBlendFractionLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/animationBlendFraction"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "1.0"
placeholder_text = "1.0"
alignment = 2
max_length = 20

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="connection/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="text_changed" from="Name" to="." method="_on_name_text_changed"]
[connection signal="popup_hide" from="DataPopupPanel" to="." method="_on_popup_panel_popup_hide"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/BaseNode/ConfirmDeleteButton" to="." method="_on_confirm_delete_button_pressed"]
[connection signal="value_changed" from="DataPopupPanel/VBoxContainer/BaseNode/nodeIDSpinBox" to="." method="_on_node_id_spin_box_value_changed"]
[connection signal="toggled" from="DataPopupPanel/VBoxContainer/BaseNode/PinButton" to="." method="_on_pin_button_toggled"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/BaseNode/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="item_selected" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/userData/userDataButton" to="." method="_on_user_data_button_item_selected"]
[connection signal="item_selected" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enable/enableButton" to="." method="_on_enable_button_item_selected"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/maxForce/maxForceLine" to="." method="_on_max_force_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/tau/tauLine" to="." method="_on_tau_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/damping/dampingLine" to="." method="_on_damping_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/proportionalRecoveryVelocity/proportionalRecoveryVelocityLine" to="." method="_on_proportional_recovery_velocity_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/constantRecoveryVelocity/constantRecoveryVelocityLine" to="." method="_on_constant_recovery_velocity_line_text_changed"]
[connection signal="value_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/poseMatchingBone0/poseMatchingBone0SpinBox" to="." method="_on_pose_matching_bone_0_spin_box_value_changed"]
[connection signal="value_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/poseMatchingBone1/poseMatchingBone1SpinBox" to="." method="_on_pose_matching_bone_1_spin_box_value_changed"]
[connection signal="value_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/poseMatchingBone2/poseMatchingBone2SpinBox" to="." method="_on_pose_matching_bone_2_spin_box_value_changed"]
[connection signal="item_selected" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/mode/modeButton" to="." method="_on_mode_button_item_selected"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/animationBlendFraction/animationBlendFractionLine" to="." method="_on_animation_blend_fraction_line_text_changed"]
